.apex/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AuthorizationLink__c</fullName>
        <formula>$Setup.GoogleSetting__c.GoogleoAuthUrl__c &amp;&apos;redirect_uri=&apos;&amp;$Setup.GoogleSetting__c.Redirect_uri__c &amp;&apos;&amp;response_type=code&amp;client_id=&apos;&amp; $Setup.GoogleSetting__c.ConsumerKey__c &amp;
            &apos;&amp;scope=&apos;+ $Setup.GoogleSetting__c.Calendar_Scope__c &amp;&apos;&amp;prompt=consent&amp;access_type=offline&amp;include_granted_scopes=true&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AuthorizationLink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendar_Authorization_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Calendar Authorization Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expire_In__c</fullName>
        <label>Expire In</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Refresh_Token__c</fullName>
        <label>Refresh Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specialization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Specialization</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Physicians</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Token_update_time__c</fullName>
        <label>Token_update_time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Donated__c</fullName>
        <label>Total Amount Donated</label>
        <summarizedField>Donation__c.Donation_Amount__c</summarizedField>
        <summaryForeignKey>Donation__c.Donor__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>access_token__c</fullName>
        <label>access token</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>token_expired__c</fullName>
        <formula>OR((ISNULL(Token_update_time__c)),AND(NOT(ISNULL(Token_update_time__c)),(NOW()-Token_update_time__c)*24*60*60 &gt;  Expire_In__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>token_expired</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>